[gd_scene load_steps=18 format=3 uid="uid://7pwe60a0qt6u"]

[ext_resource type="Texture2D" uid="uid://dee3m5udbl6gf" path="res://assets/enemy_epikness.aseprite.png" id="1_x4qua"]
[ext_resource type="Script" path="res://Scenes/enemy.gd" id="1_yt0l8"]
[ext_resource type="Texture2D" uid="uid://blda3y8tfgd1" path="res://enemy_death.aseprite.png" id="2_6tbai"]
[ext_resource type="AudioStream" uid="uid://ovudg7ipnje1" path="res://assets/dsoof.wav" id="3_443qe"]
[ext_resource type="AudioStream" uid="uid://bgqqjwmxplulw" path="res://dspodth3.wav" id="5_5s6jh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hb8e2"]
atlas = ExtResource("2_6tbai")
region = Rect2(0, 0, 27, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_voyv0"]
atlas = ExtResource("2_6tbai")
region = Rect2(27, 0, 27, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxncf"]
atlas = ExtResource("2_6tbai")
region = Rect2(54, 0, 27, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_ik64m"]
atlas = ExtResource("2_6tbai")
region = Rect2(81, 0, 27, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5lgn"]
atlas = ExtResource("2_6tbai")
region = Rect2(108, 0, 27, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_ng5gh"]
atlas = ExtResource("2_6tbai")
region = Rect2(135, 0, 27, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_4xknm"]
atlas = ExtResource("2_6tbai")
region = Rect2(162, 0, 27, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_x6ixq"]
atlas = ExtResource("1_x4qua")
region = Rect2(0, 0, 27, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_1osnt"]
atlas = ExtResource("1_x4qua")
region = Rect2(0, 23, 27, 23)

[sub_resource type="SpriteFrames" id="SpriteFrames_na3nw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hb8e2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_voyv0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mxncf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ik64m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5lgn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ng5gh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4xknm")
}],
"loop": false,
"name": &"dead",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6ixq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1osnt")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_0nhqy"]
radius = 82.6075

[sub_resource type="CircleShape2D" id="CircleShape2D_vuaey"]
radius = 11.0454

[node name="Enemy" type="CharacterBody2D" groups=["Enemy"]]
z_index = -1
disable_mode = 2
collision_layer = 2147487742
collision_mask = 4094
script = ExtResource("1_yt0l8")

[node name="Shoot_Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Area2D" type="Area2D" parent="." groups=["Enemy"]]
position = Vector2(14, -3)
rotation = 1.55671
collision_layer = 511
collision_mask = 255

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Area2D"]
sprite_frames = SubResource("SpriteFrames_na3nw")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_0nhqy")

[node name="DetectionArea" type="Area2D" parent="Area2D"]
collision_layer = 4095
collision_mask = 4095

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D/DetectionArea"]
position = Vector2(-4.04185, 2.94337)
rotation = -1.5708
polygon = PackedVector2Array(73.0209, -71.9788, 135.522, -36.095, 138.69, 22.9555, 77.9923, 72.1055, 1, 3)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_443qe")
volume_db = 24.0
bus = &"SFX"

[node name="death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_5s6jh")
bus = &"SFX"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(14, -3)
shape = SubResource("CircleShape2D_vuaey")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(25, 6)

[connection signal="timeout" from="Shoot_Timer" to="." method="_on_shoot_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D/DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="Area2D/DetectionArea" to="." method="_on_detection_area_body_exited"]
